Added sprint movement Changed walk and crouch animations

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -443,4 +443,6 @@ AdditionalPlistData=
 MinimumOSVersion=MSOS_Vista
 AudioDevice=
 
+[/Script/Engine.EndUserSettings]
+bSendAnonymousUsageDataToEpic=False
 
